src/App.css
@font-face {
  font-family: 'BlackChancery';
  src: url('./assets/BlackChancery.ttf');
  format: 'truetype';
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html{
  width: 100%;
  overflow-x: hidden;
}

body {
  min-width: 100vw;

  font-family: "Helvetica", "Arial", sans-serif;
  color: #333;

  /* background-color: orange; */
}

main{
  min-width: 100vw;
}


.home-background, .home-background-lowres, .home-background-loaded{
  width: 100vw;
  height: 90dvh;

  display: flex;
  align-items: center;
  justify-content: center;

  background-position: center;
  background-repeat: no-repeat;

  background-size: cover;
}

.home-background h1{
  display: none;
  transform: translate(0, -2em);
  filter: blur(5px);
  transition: transform 0.5s ease-in, filter 0.5s ease-in;

  font-family: 'BlackChancery';
  font-size: 6em;
  font-weight: 500;


  color: white;
}

.home-background-lowres h1{
  display: none;
  transform: translate(0, -2em);
  filter: blur(5px);
  transition: transform 0.5s ease-in, filter 0.5s ease-in;
}

.home-background-loaded h1{
  display: block;
  transform: translate(0, -1em);
  filter: blur(0px);
}

.next-event-container{
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;

  position: relative;
  z-index: 3;
}

.next-event-card{
  width: 60vw;

  display: flex;
  flex-direction: column;
  justify-content: space-around;

  margin: -4em auto 0 auto;

  background-color: white;

  padding: 2em;
  border-radius: 2em;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
}
.next-event-card h3{
  width: calc(60vw - 4em);
  height: 1em;
  margin: -0.5em auto 1.5em auto;
  text-align: center;
  font-size: 1em;
  font-weight: 400;
}

.next-event-card h1{
  width: calc(60vw - 2em);
  
  padding-top: 1em;
  border-top: 1px solid rgb(215, 215, 215);

  margin-bottom: 0.5em;
}

.next-event-card p{
  margin-bottom: 1.5em;
}

.next-event-card a {
  transform: translate(0, 1em);
  text-align: center;
  text-decoration: none;

  padding-top: 1em;
  border-top: 1px solid rgb(215, 215, 215);

  color:#333;
  font-weight: 700;
}

.next-event-card a:hover {
  cursor: pointer;
  color: #911100;
}

#discover {
  color:#333;
  font-weight: 500;
}

.cd-container{
  width: 60vw;
  height: 15em;
  margin: 2em auto 4em auto;

  background-color: white;
  border-radius: 2em;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);

  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.cd-container img{
  width: 15em;
  height: 15em;

  border-radius: 2em 0 0 2em;
}

.cd-container div{
  width: calc(60vw - 15em);
  height: 15em;
  padding: 2em;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.cd-container p{
  transform: translate(0, -2em);
}

.cd-container a{
  text-decoration: none;
  color:#333;
  font-weight: 700;
}

.cd-container a:hover{
  cursor: pointer;
  color: #911100;
  text-decoration: underline;
}

@media (max-width: 640px) {
  .home-background h1{
    font-size: 4em;
  }

  .home-background, .home-background-lowres, .home-background-loaded{
    height: 70dvh;
  }

  .next-event-card{
    width: 80vw;
  }

  .next-event-card h3{
    width: calc(80vw - 4em);
  }
  .next-event-card h1{
    width: calc(80vw - 2em);
  }

  .cd-container{
    width: 80vw;
    height: 30em;
    flex-direction: column;
  }

  .cd-container img{
    width: 80vw;
    height: 15em;
    object-fit: cover;
    object-position: top;
    border-radius: 2em 2em 0 0;
  }

  .cd-container div{
    width: 80vw;
    min-height: 15em;
  }
}

